--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,7 @@
 
 :root {
     --accent: #ffb700;
+    --accent-ds: #ffc531;
 }
 
 body {
@@ -51,6 +52,14 @@ a {
     padding-bottom: 5px;
 }
 
+.navItem.active {
+    color: var(--accent-ds)
+}
+
+.navItem.active:hover {
+    box-shadow: 0 0;
+}
+
 .navItem:hover {
     box-shadow: 0 2px white;
 }
@@ -68,19 +77,11 @@ a {
 }
 
 #labImg {
-    width: 45vw;
+    width: 57vw;
     border-radius: 8px;
-    position: absolute;
-    opacity: 0.5;
+    position: relative;
     transition: 300ms;
-}
-
-#labImg.active {
-    left: 150px;
-    top: 200px;
-    z-index: 4;
-    opacity: 1;
-    transition: 300ms;
+    top: 10px;
 }
 
 #labImgHolder {
@@ -148,44 +149,6 @@ a {
 
 #helpHolder:hover {
     background: #fff3;
-}
-
-@keyframes swapIn {
-    from {
-        top: 100px;
-        left: 10px;
-        opacity: 0.5;
-        z-index: -1;
-    }
-    to {
-        top: 200px;
-        left: 150px;
-        opacity: 1;
-        z-index: 4;
-    }
-}
-
-@keyframes swapOut {
-    from {
-        top: 200px;
-        left: 150px;
-        opacity: 1;
-        z-index: 4;
-    }
-    to {
-        top: 100px;
-        left: 10px;
-        opacity: 0.5;
-        z-index: -1;
-    }
-}
-
-#labImg.active {
-    animation: swapIn 1.5s 1;
-}
-
-#labImg.inactive {
-    animation: swapOut 1.5s 1;
 }
 
 #windowCloser {
